--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -11,8 +11,8 @@
     <item name="android:background">@drawable/green_with_gradient</item>
     </style>
 
-    <style name="WizardButton" parent="AppTheme">
-        <item name="android:background">#526E17</item>
+    <style name="WizardButton" parent="android:Widget.Holo.Light.Button">
+    <item name="android:background">#526E17</item>
         <item name="android:paddingTop">8dp</item>
         <item name="android:paddingBottom">8dp</item>
         <item name="android:paddingRight">24dp</item>
