--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -81,7 +81,7 @@
                 android:layout_alignBottom="@+id/input_code"
                 android:layout_marginBottom="6dp"
                 android:layout_marginLeft="20dp"
-                android:text="eller"
+                android:text="@string/or_label"
                 android:textColor="#526E17"
                 android:textSize="32sp" />
 
@@ -93,7 +93,7 @@
                 android:layout_alignEnd="@+id/scan_button"
                 android:layout_below="@+id/scan_button"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="28dp"
                 android:layout_toRightOf="@+id/or_label"
                 android:text="@string/input_product_code"
                 android:textSize="20sp" />
