--- a/src/main/res/layout/fragment_manual_input.xml
+++ b/src/main/res/layout/fragment_manual_input.xml
@@ -45,11 +45,13 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/manual_input_gtin_edittext"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="24dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="34dp"
         android:drawableLeft="@drawable/search_icon"
         android:drawablePadding="10dp"
         android:text="@string/manual_gtin_search"
-        android:textSize="42sp" />
+        android:textSize="36sp" />
 
 
 </RelativeLayout>
