--- a/src/main/res/layout/splashscreen.xml
+++ b/src/main/res/layout/splashscreen.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/screen"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="#526E17">
+<LinearLayout android:id="@+id/screen"
+              xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="fill_parent"
+              android:layout_height="fill_parent"
+              android:background="#526E17">
 
     <ImageView
         android:layout_width="fill_parent"
@@ -14,6 +14,6 @@
         android:layout_marginRight="20dp"
         android:contentDescription="@string/please_wait"
         android:gravity="center"
-        android:src="@drawable/splashscreen" />
+        android:src="@drawable/splashscreen"/>
 
 </LinearLayout>
