--- a/src/main/res/layout/fragment_check_if_vegetarian.xml
+++ b/src/main/res/layout/fragment_check_if_vegetarian.xml
@@ -1,13 +1,13 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/scrollView"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".wizard.CheckIfLactoOvoVegetarian.CheckIfLactoOvoVegetarianFragment">
+<ScrollView android:id="@+id/scrollView"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            tools:context=".wizard.CheckIfLactoOvoVegetarian.CheckIfLactoOvoVegetarianFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:text="@string/maybe_vegan_headline"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+            android:textAppearance="?android:attr/textAppearanceMedium"/>
 
         <CheckBox
             android:id="@+id/contains_animal_milk"
@@ -28,7 +28,7 @@
             android:layout_below="@+id/maybe_vegan_headline"
             android:layout_marginTop="10dp"
             android:text="@string/contains_animal_milk"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/contains_animal_milk_details"
@@ -37,7 +37,7 @@
             android:layout_below="@+id/contains_animal_milk"
             android:layout_marginTop="1dp"
             android:paddingLeft="@dimen/padding_checkbox"
-            android:text="@string/contains_animal_milk_details" />
+            android:text="@string/contains_animal_milk_details"/>
 
         <CheckBox
             android:id="@+id/contains_eggs"
@@ -47,7 +47,7 @@
             android:layout_gravity="center_vertical"
             android:layout_marginTop="10dp"
             android:text="@string/contains_egg"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
 
 
         <TextView
@@ -57,7 +57,7 @@
             android:layout_below="@+id/contains_eggs"
             android:layout_marginTop="1dp"
             android:paddingLeft="@dimen/padding_checkbox"
-            android:text="@string/contains_egg_details" />
+            android:text="@string/contains_egg_details"/>
 
 
         <CheckBox
@@ -68,7 +68,7 @@
             android:layout_gravity="center_vertical"
             android:layout_marginTop="10dp"
             android:text="@string/contains_insect_excretions"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
 
 
         <TextView
@@ -78,7 +78,7 @@
             android:layout_below="@+id/contains_insect_excretions"
             android:layout_marginTop="1dp"
             android:paddingLeft="@dimen/padding_checkbox"
-            android:text="@string/contains_insect_excretions_details" />
+            android:text="@string/contains_insect_excretions_details"/>
 
         <Button
             android:id="@+id/next_wizard_button"
@@ -88,7 +88,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:layout_below="@+id/contains_insect_excretions_details"
-            android:text="@string/action_next" />
+            android:text="@string/action_next"/>
 
         <Button
             android:id="@+id/cancel_wizard_button"
@@ -98,7 +98,7 @@
             android:layout_below="@+id/contains_insect_excretions_details"
             android:layout_marginRight="50dp"
             android:layout_toLeftOf="@+id/next_wizard_button"
-            android:text="@string/action_previous" />
+            android:text="@string/action_previous"/>
 
     </RelativeLayout>
 
