--- a/src/main/res/layout/fragment_metainformation.xml
+++ b/src/main/res/layout/fragment_metainformation.xml
@@ -1,13 +1,13 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/scrollView"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".wizard.RequestMetaInformation">
+<ScrollView android:id="@+id/scrollView"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            tools:context=".wizard.RequestMetaInformation">
 
     <RelativeLayout
         android:layout_width="fill_parent"
@@ -22,20 +22,20 @@
             android:singleLine="true"
             android:text="@string/product_gtin_label"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/gtin_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_above="@+id/name_row"
-            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
             android:drawableLeft="@drawable/barcode_icon_gray"
             android:drawablePadding="6dp"
             android:gravity="center_vertical"
             android:singleLine="true"
-            android:textSize="14sp" />
+            android:textSize="14sp"/>
 
         <LinearLayout
             android:id="@+id/name_row"
@@ -49,7 +49,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/product_name_label"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"/>
 
             <EditText
                 android:id="@+id/title_edit"
@@ -57,7 +57,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:hint="@string/product_name_hint"
-                android:inputType="textCapSentences" />
+                android:inputType="textCapSentences"/>
 
         </LinearLayout>
 
@@ -74,7 +74,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/product_variant_label"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"/>
 
             <EditText
                 android:id="@+id/subtitle_edit"
@@ -82,7 +82,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:hint="@string/product_variant_hint"
-                android:inputType="textCapSentences" />
+                android:inputType="textCapSentences"/>
 
         </LinearLayout>
 
@@ -99,7 +99,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/product_brand_label"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"/>
 
             <EditText
                 android:id="@+id/brand_edit"
@@ -107,7 +107,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:hint="@string/product_brand_hint"
-                android:inputType="textCapSentences" />
+                android:inputType="textCapSentences"/>
 
         </LinearLayout>
 
@@ -124,14 +124,14 @@
                 android:layout_height="wrap_content"
                 android:text="@string/category_selector_label"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"/>
 
             <Spinner
                 android:id="@+id/category_selector"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:prompt="@string/category_selector_prompt"
-                android:spinnerMode="dialog" />
+                android:spinnerMode="dialog"/>
 
         </LinearLayout>
 
@@ -145,7 +145,7 @@
             android:gravity="left|top"
             android:hint="@string/user_commentary_hint"
             android:inputType="textCapSentences|textMultiLine"
-            android:lines="2" />
+            android:lines="2"/>
 
 
         <Button
@@ -156,7 +156,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:layout_below="@+id/commentary_edit"
-            android:text="@string/action_next" />
+            android:text="@string/action_next"/>
 
         <Button
             android:id="@+id/cancel_wizard_button"
@@ -166,7 +166,7 @@
             android:layout_below="@+id/commentary_edit"
             android:layout_marginRight="50dp"
             android:layout_toLeftOf="@+id/next_wizard_button"
-            android:text="@string/action_cancel" />
+            android:text="@string/action_cancel"/>
 
     </RelativeLayout>
 
